--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,28 @@
+
+
 .App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
+  font-family: sans-serif;
+  margin: 200px auto;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.static-timer{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  line-height: 300%;
+ align-items: center;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.timer{
+  font-size: 50px;
+  
+}
+.type-timer{
+  font-size: 20px;
+  color: gray;
+word-spacing: 3%
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
